add new line seocnd

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>this is my first web for git </h1>
-
-    <p>
-
-         
-    </p>   
-</body>
+  </head>
+  <body>
+    <h1>this is my first web for git</h1>
+    <p>this add new line</p>
+    <h1>addd seond line</h1>
+  </body>
 </html>
